creates user model and divise setup

--- a/app/javascript/src/style.scss
+++ b/app/javascript/src/style.scss
@@ -1,6 +1,18 @@
+@import '~bootstrap/scss/functions';
+@import '/variables.scss';
 @import "~bootstrap/scss/bootstrap";
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
-@import '/header.scss'
+@import '/home.scss';
+
+.center-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+body {
+  font-family: 'Font Awesome 5 Free';
+}
