--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class='py-4 bg-secondary'>
+<footer class='py-4 bg-light'>
   <div class='container text-right'>
-    <small class="text-white">Copyright © <%= Date.current.cwyear %> ToDoList</small>
+    <small class="text-dark">Copyright © <%= Date.current.cwyear %> ToDoList</small>
   <div>
 </footer>
