--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,29 +1,21 @@
-<head>
-  <title>To Do List</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  <link rel="icon" href="/favicon.ico">
-  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <%= link_to ' To do List', root_path, class: 'navbar-brand ml-3 fas fa-calendar-check fa-lg '%>
+    <%= link_to ' To Do List', root_path, class: 'navbar-brand ml-3 fas fa-calendar-check fa-lg '%>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
       <ul class="navbar-nav my-2 my-lg-0">
-        <%# if user_signed_in? %>
+        <% if user_signed_in? %>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Sign out</a>
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link text-dark" %>
           </li>
-        <%# else %>
+        <% else %>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Sign in</a>
+            <%= link_to 'Sign in', new_user_session_path, class: 'btn btn-outline-success' %>
           </li>
-        <%# end %>
+        <% end %>
       </ul>
     </div>
 
