--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <%= render 'layouts/header' %>
+  <head>
+    <title>To Do List</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <link rel="icon" href="/favicon.ico">
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
   <body class='d-flex flex-column'>
+    <%= render 'layouts/header' %>
     <div class='row no-gutters'>
       <div class='col-12'>
         <%= render partial: 'layouts/flash', flash: flash %>
         <%= yield %>
       </div>
     </div>
+    <%= render 'layouts/footer' %>
   </body>
-  <%= render 'layouts/footer' %>
 </html>
 
