creates views for registartion and session

--- a/app/javascript/src/style.scss
+++ b/app/javascript/src/style.scss
@@ -6,6 +6,7 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '/home.scss';
+@import './login-page.scss';
 
 .center-content {
   display: flex;
@@ -15,4 +16,8 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 
 body {
   font-family: 'Font Awesome 5 Free';
+}
+
+hr {
+  width: 60%;
 }
