--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,8 @@
 <% flash.each do |key, value| %>
-  <div class="<%= flash_class(key) %>">
+  <div class="<%= flash_class(key) %> alert-dismissible fade show mt-2" role="alert">
     <%= value %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 <% end %>
