--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,9 @@
   </head>
   <body class='d-flex flex-column'>
     <%= render 'layouts/header' %>
-    <div class='row no-gutters'>
-      <div class='col-12'>
-        <%= render partial: 'layouts/flash', flash: flash %>
-        <%= yield %>
-      </div>
+    <div class='container-fluid'>
+      <%= render partial: 'layouts/flash', flash: flash %>
+      <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
   </body>
