--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class='py-4 bg-light'>
+<footer class='py-4 bg-nav'>
   <div class='container text-right'>
     <small class="text-dark">Copyright © <%= Date.current.cwyear %> ToDoList</small>
   <div>
