--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-nav">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,11 +8,11 @@
       <ul class="navbar-nav my-2 my-lg-0">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "nav-link text-dark" %>
+            <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-success' %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to 'Sign in', new_user_session_path, class: 'btn btn-outline-success' %>
+            <%= link_to 'Log in', new_user_session_path, class: 'btn btn-outline-success' %>
           </li>
         <% end %>
       </ul>
