--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body class='d-flex flex-column'>
+  <body class='d-flex flex-column h-100'>
     <%= render 'layouts/header' %>
-    <div class='container-fluid'>
+    <div class='container-fluid h-100'>
       <%= render partial: 'layouts/flash', flash: flash %>
       <%= yield %>
     </div>
