--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row h-100">
+<div class="row min-vh-100">
   <div class="col-md-6 col-sm-12 img_with_text p-0 background_home_foto center-content">
     <h2 class="text-center text-white text_with_border">Your simple organizer!</br>
      Sign up in our app and make sure you don't miss anything!
