--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,8 +1,12 @@
 <% flash.each do |key, value| %>
-  <div class="<%= flash_class(key) %> alert-dismissible fade show mt-3" role="alert">
-    <%= value %>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="<%= flash_class(key) %> alert-dismissible fade show mt-3" role="alert">
+        <%= value %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
   </div>
 <% end %>
