--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class='py-4 bg-nav'>
-  <div class='container text-right'>
+<footer class='py-2 bg-nav'>
+  <div class='text-right pr-5'>
     <small class="text-dark">Copyright © <%= Date.current.cwyear %> ToDoList</small>
   <div>
 </footer>
