--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,67 @@
-<dvi class="row">
-  <div class="col-md-6 col-sm-12">
-    buuuu
-    <%= current_user.name %>
+<dvi class="row min-vh-100">
+  <div class="col-md-6 col-sm-12 p-4">
+    <% if !@tasks.present? %>
+      <div class="center-content h-100">
+        <h2>Add your first task!</h2>
+      </div>
+    <% else %>
+      <table class="table ">
+        <thead class="thead-success">
+          <tr>
+            <th scope="col">Descriprion</th>
+            <th scope="col">Finished</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <% @tasks.each do |task| %>
+          <tbody>
+            <tr>
+              <th scope="row"><%= task.description%></th>
+              <td>czekbox</td>
+              <td>
+                <button type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="right" data-trigger="click"
+                data-content="
+                  <%= task.address %>
+                  <%= task.due_date %>
+                  <% if task.due_time.present? %>
+                    <%= task.due_time.hour %>:<%= task.due_time.min %>
+                  <% end %>
+                ">
+                  Details
+                </button>
+                <%= link_to 'edit', edit_task_path(task), class: 'btn btn-success' %>
+                <%= link_to 'destroy', task_path(task), method: :delete,
+                  class: 'btn btn-danger', data: { confirm: 'Czy na pewno?'} %>
+              </td>
+            </tr>
+          </tbody>
+        <% end %>
+      </table>
+    <% end %>
   </div>
-  <div class="col-md-6 col-sm-12">
-  Bukkk
+  <div class="col-md-6 col-sm-12 p-4">
+    <div class=" jumbotron pl-5 pr-5">
+      <h3 class="text-center">Add task</h3>
+      <%= simple_form_for(@task, as: :task, url: tasks_path(@task)) do |f| %>
+        <div class="form-inputs">
+          <%= f.input :description,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "description" }%>
+          <%= f.input :address,
+                      input_html: { autocomplete: "address" }%>
+          <%= f.input :due_date,
+                      as: :date,
+                      input_html: { autocomplete: "due_date" } %>
+          <%= f.input :due_time,
+                      as: :time,
+                      hint: 'Leave empty if you want..',
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+        <div class="form-actions login-page center-content">
+          <%= f.button :submit, "Add task", class: 'btn btn-outline-success' %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </dvi>
